<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBlue"
    tools:context=".view.SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:paddingStart="18dp"
        android:paddingTop="14dp"
        android:paddingEnd="18dp"
        android:paddingBottom="14dp"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/textSecondary"
        app:layout_constraintBottom_toTopOf="@id/etPassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />


    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:autofillHints="password"
        android:background="@drawable/bg_edit_text"
        android:drawableTint="@color/textSecondary"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:paddingTop="14dp"
        android:paddingEnd="18dp"
        android:paddingBottom="14dp"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/textSecondary"
        app:layout_constraintBottom_toTopOf="@id/etConfirmPassword"
        app:layout_constraintEnd_toEndOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="@id/etEmail"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <ImageView
        android:id="@+id/ivPasswordVisibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:src="@drawable/ic_baseline_visibility_off_24"
        app:layout_constraintBottom_toBottomOf="@id/etPassword"
        app:layout_constraintEnd_toEndOf="@id/etPassword"
        app:layout_constraintTop_toTopOf="@id/etPassword"
        app:tint="@color/textSecondary" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:autofillHints="password"
        android:background="@drawable/bg_edit_text"
        android:drawableTint="@color/textSecondary"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:paddingTop="14dp"
        android:paddingEnd="18dp"
        android:paddingBottom="14dp"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/textSecondary"
        app:layout_constraintBottom_toTopOf="@id/tvSignUp"
        app:layout_constraintEnd_toEndOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="@id/etEmail"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <ImageView
        android:id="@+id/ivConfirmPassVisibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:src="@drawable/ic_baseline_visibility_off_24"
        app:layout_constraintBottom_toBottomOf="@id/etConfirmPassword"
        app:layout_constraintEnd_toEndOf="@id/etConfirmPassword"
        app:layout_constraintTop_toTopOf="@id/etConfirmPassword"
        app:tint="@color/textSecondary" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/bg_button"
        android:foreground="?android:selectableItemBackground"
        android:gravity="center"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:text="@string/sign_up"
        android:textColor="@color/primaryBlue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="@id/etEmail"
        app:layout_constraintTop_toBottomOf="@id/etConfirmPassword" />

    <TextView
        android:id="@+id/tvAccountPresent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_registered"
        android:textColor="@color/textPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tvLogin"
        app:layout_constraintEnd_toStartOf="@id/tvLogin"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/etEmail"
        app:layout_constraintTop_toTopOf="@id/tvLogin" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="26dp"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/etEmail"
        app:layout_constraintStart_toEndOf="@id/tvAccountPresent" />

</androidx.constraintlayout.widget.ConstraintLayout>